--- a/Routing simulator/Routing simulator.csproj
+++ b/Routing simulator/Routing simulator.csproj
@@ -46,13 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EdgeToNeighbor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Graph.cs" />
+    <Compile Include="NodeList.cs" />
     <Compile Include="GraphDrawer.cs" />
+    <Compile Include="NeighborList.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
