--- a/Routing simulator/Routing simulator.csproj
+++ b/Routing simulator/Routing simulator.csproj
@@ -33,6 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AwesomeShapeControl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>E:\Programų sistemos\AwesomeShapeControl\AwesomeShapeControl\bin\Debug\AwesomeShapeControl.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.VisualStudio.GraphModel, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,9 +51,18 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EdgeControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="EdgeControl.Designer.cs">
+      <DependentUpon>EdgeControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EdgeDrawer.cs" />
     <Compile Include="EdgeToNeighbor.cs" />
+    <Compile Include="EdgeVisual.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +111,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\RouterImage.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
