--- a/Routing simulator/Routing simulator.csproj
+++ b/Routing simulator/Routing simulator.csproj
@@ -77,7 +77,9 @@
       <DependentUpon>NodeControl.cs</DependentUpon>
     </Compile>
     <Compile Include="NodeList.cs" />
-    <Compile Include="GraphDrawer.cs" />
+    <Compile Include="GraphController.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="NeighborList.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
