--- a/Routing simulator/Routing simulator.csproj
+++ b/Routing simulator/Routing simulator.csproj
@@ -54,12 +54,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EdgeControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="EdgeControl.Designer.cs">
-      <DependentUpon>EdgeControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="EdgeVisual.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -76,9 +70,16 @@
     <Compile Include="GraphController.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Packet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Receiver.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="RoutingTable.cs" />
+    <Compile Include="Sender.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TableEntry.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -111,6 +112,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hostImage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\host2Image.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
